Tool/framework/1_nl2dbc/mr2jml/mr2jml-translator/parser.output
State 4 conflicts: 1 shift/reduce


Grammar

    0 $accept: MRs $end

    1 MRs: MRs MR
    2    | MR

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC
    4   | formula IMPLY formula
    5   | formula EQUIV formula
    6   | formula AND formula
    7   | LBRAC complex_formula RBRAC IMPLY formula
    8   | formula IMPLY LBRAC complex_formula RBRAC
    9   | LBRAC complex_formula RBRAC IMPLY LBRAC complex_formula RBRAC
   10   | ANNOT_PREDICATE LBRAC varlist RBRAC
   11   | formula

   12 complex_formula: complex_formula connective formula
   13                | LBRAC complex_formula RBRAC connective formula
   14                | LBRAC complex_formula RBRAC connective LBRAC formula RBRAC
   15                | complex_formula connective LBRAC formula RBRAC
   16                | formula

   17 formula: quantifier VARIABLE LBRAC terms RBRAC

   18 terms: terms connective predicate
   19      | terms connective LBRAC terms RBRAC
   20      | terms connective formula
   21      | terms connective MINUS LBRAC terms RBRAC
   22      | LBRAC formula RBRAC
   23      | predicate

   24 connective: AND
   25           | OR
   26           | IMPLY
   27           | EQUIV

   28 predicates: predicates connective predicate
   29           | predicate

   30 predicate: ANNOT_PREDICATE LBRAC varlist RBRAC

   31 varlist: varlist COMMA VARIABLE
   32        | varlist COMMA formula
   33        | formula
   34        | VARIABLE

   35 quantifier: EXISTS
   36           | NOTEXISTS
   37           | ALL
   38           | NOTALL


Terminals, with rules where they appear

$end (0) 0
error (256)
ANNOT_PREDICATE (258) 10 30
VARIABLE (259) 3 17 31 34
EXISTS (260) 35
NOTEXISTS (261) 36
ALL (262) 3 37
NOTALL (263) 38
COMMA (264) 31 32
LBRAC (265) 3 7 8 9 10 13 14 15 17 19 21 22 30
RBRAC (266) 3 7 8 9 10 13 14 15 17 19 21 22 30
MINUS (267) 21
EQUIV (268) 5 27
IMPLY (269) 3 4 7 8 9 26
OR (270) 25
AND (271) 6 24


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
MRs (18)
    on left: 1 2, on right: 0 1
MR (19)
    on left: 3 4 5 6 7 8 9 10 11, on right: 1 2
complex_formula (20)
    on left: 12 13 14 15 16, on right: 3 7 8 9 12 13 14 15
formula (21)
    on left: 17, on right: 4 5 6 7 8 11 12 13 14 15 16 20 22 32 33
terms (22)
    on left: 18 19 20 21 22 23, on right: 17 18 19 20 21
connective (23)
    on left: 24 25 26 27, on right: 12 13 14 15 18 19 20 21 28
predicates (24)
    on left: 28 29, on right: 3 28
predicate (25)
    on left: 30, on right: 3 18 23 28 29
varlist (26)
    on left: 31 32 33 34, on right: 10 30 31 32
quantifier (27)
    on left: 35 36 37 38, on right: 17


state 0

    0 $accept: . MRs $end

    ANNOT_PREDICATE  shift, and go to state 1
    EXISTS           shift, and go to state 2
    NOTEXISTS        shift, and go to state 3
    ALL              shift, and go to state 4
    NOTALL           shift, and go to state 5
    LBRAC            shift, and go to state 6

    MRs         go to state 7
    MR          go to state 8
    formula     go to state 9
    quantifier  go to state 10


state 1

   10 MR: ANNOT_PREDICATE . LBRAC varlist RBRAC

    LBRAC  shift, and go to state 11


state 2

   35 quantifier: EXISTS .

    $default  reduce using rule 35 (quantifier)


state 3

   36 quantifier: NOTEXISTS .

    $default  reduce using rule 36 (quantifier)


state 4

    3 MR: ALL . VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC
   37 quantifier: ALL .

    VARIABLE  shift, and go to state 12

    VARIABLE  [reduce using rule 37 (quantifier)]


state 5

   38 quantifier: NOTALL .

    $default  reduce using rule 38 (quantifier)


state 6

    7 MR: LBRAC . complex_formula RBRAC IMPLY formula
    9   | LBRAC . complex_formula RBRAC IMPLY LBRAC complex_formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 14

    complex_formula  go to state 15
    formula          go to state 16
    quantifier       go to state 10


state 7

    0 $accept: MRs . $end
    1 MRs: MRs . MR

    $end             shift, and go to state 17
    ANNOT_PREDICATE  shift, and go to state 1
    EXISTS           shift, and go to state 2
    NOTEXISTS        shift, and go to state 3
    ALL              shift, and go to state 4
    NOTALL           shift, and go to state 5
    LBRAC            shift, and go to state 6

    MR          go to state 18
    formula     go to state 9
    quantifier  go to state 10


state 8

    2 MRs: MR .

    $default  reduce using rule 2 (MRs)


state 9

    4 MR: formula . IMPLY formula
    5   | formula . EQUIV formula
    6   | formula . AND formula
    8   | formula . IMPLY LBRAC complex_formula RBRAC
   11   | formula .

    EQUIV  shift, and go to state 19
    IMPLY  shift, and go to state 20
    AND    shift, and go to state 21

    $default  reduce using rule 11 (MR)


state 10

   17 formula: quantifier . VARIABLE LBRAC terms RBRAC

    VARIABLE  shift, and go to state 22


state 11

   10 MR: ANNOT_PREDICATE LBRAC . varlist RBRAC

    VARIABLE   shift, and go to state 23
    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 24
    varlist     go to state 25
    quantifier  go to state 10


state 12

    3 MR: ALL VARIABLE . LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC

    LBRAC  shift, and go to state 26


state 13

   37 quantifier: ALL .

    $default  reduce using rule 37 (quantifier)


state 14

   13 complex_formula: LBRAC . complex_formula RBRAC connective formula
   14                | LBRAC . complex_formula RBRAC connective LBRAC formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 14

    complex_formula  go to state 27
    formula          go to state 16
    quantifier       go to state 10


state 15

    7 MR: LBRAC complex_formula . RBRAC IMPLY formula
    9   | LBRAC complex_formula . RBRAC IMPLY LBRAC complex_formula RBRAC
   12 complex_formula: complex_formula . connective formula
   15                | complex_formula . connective LBRAC formula RBRAC

    RBRAC  shift, and go to state 28
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 33


state 16

   16 complex_formula: formula .

    $default  reduce using rule 16 (complex_formula)


state 17

    0 $accept: MRs $end .

    $default  accept


state 18

    1 MRs: MRs MR .

    $default  reduce using rule 1 (MRs)


state 19

    5 MR: formula EQUIV . formula

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 34
    quantifier  go to state 10


state 20

    4 MR: formula IMPLY . formula
    8   | formula IMPLY . LBRAC complex_formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 35

    formula     go to state 36
    quantifier  go to state 10


state 21

    6 MR: formula AND . formula

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 37
    quantifier  go to state 10


state 22

   17 formula: quantifier VARIABLE . LBRAC terms RBRAC

    LBRAC  shift, and go to state 38


state 23

   34 varlist: VARIABLE .

    $default  reduce using rule 34 (varlist)


state 24

   33 varlist: formula .

    $default  reduce using rule 33 (varlist)


state 25

   10 MR: ANNOT_PREDICATE LBRAC varlist . RBRAC
   31 varlist: varlist . COMMA VARIABLE
   32        | varlist . COMMA formula

    COMMA  shift, and go to state 39
    RBRAC  shift, and go to state 40


state 26

    3 MR: ALL VARIABLE LBRAC . predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC

    ANNOT_PREDICATE  shift, and go to state 41

    predicate  go to state 42


state 27

   12 complex_formula: complex_formula . connective formula
   13                | LBRAC complex_formula . RBRAC connective formula
   14                | LBRAC complex_formula . RBRAC connective LBRAC formula RBRAC
   15                | complex_formula . connective LBRAC formula RBRAC

    RBRAC  shift, and go to state 43
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 33


state 28

    7 MR: LBRAC complex_formula RBRAC . IMPLY formula
    9   | LBRAC complex_formula RBRAC . IMPLY LBRAC complex_formula RBRAC

    IMPLY  shift, and go to state 44


state 29

   27 connective: EQUIV .

    $default  reduce using rule 27 (connective)


state 30

   26 connective: IMPLY .

    $default  reduce using rule 26 (connective)


state 31

   25 connective: OR .

    $default  reduce using rule 25 (connective)


state 32

   24 connective: AND .

    $default  reduce using rule 24 (connective)


state 33

   12 complex_formula: complex_formula connective . formula
   15                | complex_formula connective . LBRAC formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 45

    formula     go to state 46
    quantifier  go to state 10


state 34

    5 MR: formula EQUIV formula .

    $default  reduce using rule 5 (MR)


state 35

    8 MR: formula IMPLY LBRAC . complex_formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 14

    complex_formula  go to state 47
    formula          go to state 16
    quantifier       go to state 10


state 36

    4 MR: formula IMPLY formula .

    $default  reduce using rule 4 (MR)


state 37

    6 MR: formula AND formula .

    $default  reduce using rule 6 (MR)


state 38

   17 formula: quantifier VARIABLE LBRAC . terms RBRAC

    ANNOT_PREDICATE  shift, and go to state 41
    LBRAC            shift, and go to state 48

    terms      go to state 49
    predicate  go to state 50


state 39

   31 varlist: varlist COMMA . VARIABLE
   32        | varlist COMMA . formula

    VARIABLE   shift, and go to state 51
    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 52
    quantifier  go to state 10


state 40

   10 MR: ANNOT_PREDICATE LBRAC varlist RBRAC .

    $default  reduce using rule 10 (MR)


state 41

   30 predicate: ANNOT_PREDICATE . LBRAC varlist RBRAC

    LBRAC  shift, and go to state 53


state 42

    3 MR: ALL VARIABLE LBRAC predicate . IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC

    IMPLY  shift, and go to state 54


state 43

   13 complex_formula: LBRAC complex_formula RBRAC . connective formula
   14                | LBRAC complex_formula RBRAC . connective LBRAC formula RBRAC

    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 55


state 44

    7 MR: LBRAC complex_formula RBRAC IMPLY . formula
    9   | LBRAC complex_formula RBRAC IMPLY . LBRAC complex_formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 56

    formula     go to state 57
    quantifier  go to state 10


state 45

   15 complex_formula: complex_formula connective LBRAC . formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 58
    quantifier  go to state 10


state 46

   12 complex_formula: complex_formula connective formula .

    $default  reduce using rule 12 (complex_formula)


state 47

    8 MR: formula IMPLY LBRAC complex_formula . RBRAC
   12 complex_formula: complex_formula . connective formula
   15                | complex_formula . connective LBRAC formula RBRAC

    RBRAC  shift, and go to state 59
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 33


state 48

   22 terms: LBRAC . formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 60
    quantifier  go to state 10


state 49

   17 formula: quantifier VARIABLE LBRAC terms . RBRAC
   18 terms: terms . connective predicate
   19      | terms . connective LBRAC terms RBRAC
   20      | terms . connective formula
   21      | terms . connective MINUS LBRAC terms RBRAC

    RBRAC  shift, and go to state 61
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 62


state 50

   23 terms: predicate .

    $default  reduce using rule 23 (terms)


state 51

   31 varlist: varlist COMMA VARIABLE .

    $default  reduce using rule 31 (varlist)


state 52

   32 varlist: varlist COMMA formula .

    $default  reduce using rule 32 (varlist)


state 53

   30 predicate: ANNOT_PREDICATE LBRAC . varlist RBRAC

    VARIABLE   shift, and go to state 23
    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 24
    varlist     go to state 63
    quantifier  go to state 10


state 54

    3 MR: ALL VARIABLE LBRAC predicate IMPLY . LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC

    LBRAC  shift, and go to state 64


state 55

   13 complex_formula: LBRAC complex_formula RBRAC connective . formula
   14                | LBRAC complex_formula RBRAC connective . LBRAC formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 65

    formula     go to state 66
    quantifier  go to state 10


state 56

    9 MR: LBRAC complex_formula RBRAC IMPLY LBRAC . complex_formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 14

    complex_formula  go to state 67
    formula          go to state 16
    quantifier       go to state 10


state 57

    7 MR: LBRAC complex_formula RBRAC IMPLY formula .

    $default  reduce using rule 7 (MR)


state 58

   15 complex_formula: complex_formula connective LBRAC formula . RBRAC

    RBRAC  shift, and go to state 68


state 59

    8 MR: formula IMPLY LBRAC complex_formula RBRAC .

    $default  reduce using rule 8 (MR)


state 60

   22 terms: LBRAC formula . RBRAC

    RBRAC  shift, and go to state 69


state 61

   17 formula: quantifier VARIABLE LBRAC terms RBRAC .

    $default  reduce using rule 17 (formula)


state 62

   18 terms: terms connective . predicate
   19      | terms connective . LBRAC terms RBRAC
   20      | terms connective . formula
   21      | terms connective . MINUS LBRAC terms RBRAC

    ANNOT_PREDICATE  shift, and go to state 41
    EXISTS           shift, and go to state 2
    NOTEXISTS        shift, and go to state 3
    ALL              shift, and go to state 13
    NOTALL           shift, and go to state 5
    LBRAC            shift, and go to state 70
    MINUS            shift, and go to state 71

    formula     go to state 72
    predicate   go to state 73
    quantifier  go to state 10


state 63

   30 predicate: ANNOT_PREDICATE LBRAC varlist . RBRAC
   31 varlist: varlist . COMMA VARIABLE
   32        | varlist . COMMA formula

    COMMA  shift, and go to state 39
    RBRAC  shift, and go to state 74


state 64

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC . LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC

    LBRAC  shift, and go to state 75


state 65

   14 complex_formula: LBRAC complex_formula RBRAC connective LBRAC . formula RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5

    formula     go to state 76
    quantifier  go to state 10


state 66

   13 complex_formula: LBRAC complex_formula RBRAC connective formula .

    $default  reduce using rule 13 (complex_formula)


state 67

    9 MR: LBRAC complex_formula RBRAC IMPLY LBRAC complex_formula . RBRAC
   12 complex_formula: complex_formula . connective formula
   15                | complex_formula . connective LBRAC formula RBRAC

    RBRAC  shift, and go to state 77
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 33


state 68

   15 complex_formula: complex_formula connective LBRAC formula RBRAC .

    $default  reduce using rule 15 (complex_formula)


state 69

   22 terms: LBRAC formula RBRAC .

    $default  reduce using rule 22 (terms)


state 70

   19 terms: terms connective LBRAC . terms RBRAC

    ANNOT_PREDICATE  shift, and go to state 41
    LBRAC            shift, and go to state 48

    terms      go to state 78
    predicate  go to state 50


state 71

   21 terms: terms connective MINUS . LBRAC terms RBRAC

    LBRAC  shift, and go to state 79


state 72

   20 terms: terms connective formula .

    $default  reduce using rule 20 (terms)


state 73

   18 terms: terms connective predicate .

    $default  reduce using rule 18 (terms)


state 74

   30 predicate: ANNOT_PREDICATE LBRAC varlist RBRAC .

    $default  reduce using rule 30 (predicate)


state 75

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC . complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC

    EXISTS     shift, and go to state 2
    NOTEXISTS  shift, and go to state 3
    ALL        shift, and go to state 13
    NOTALL     shift, and go to state 5
    LBRAC      shift, and go to state 14

    complex_formula  go to state 80
    formula          go to state 16
    quantifier       go to state 10


state 76

   14 complex_formula: LBRAC complex_formula RBRAC connective LBRAC formula . RBRAC

    RBRAC  shift, and go to state 81


state 77

    9 MR: LBRAC complex_formula RBRAC IMPLY LBRAC complex_formula RBRAC .

    $default  reduce using rule 9 (MR)


state 78

   18 terms: terms . connective predicate
   19      | terms . connective LBRAC terms RBRAC
   19      | terms connective LBRAC terms . RBRAC
   20      | terms . connective formula
   21      | terms . connective MINUS LBRAC terms RBRAC

    RBRAC  shift, and go to state 82
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 62


state 79

   21 terms: terms connective MINUS LBRAC . terms RBRAC

    ANNOT_PREDICATE  shift, and go to state 41
    LBRAC            shift, and go to state 48

    terms      go to state 83
    predicate  go to state 50


state 80

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula . RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC
   12 complex_formula: complex_formula . connective formula
   15                | complex_formula . connective LBRAC formula RBRAC

    RBRAC  shift, and go to state 84
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 33


state 81

   14 complex_formula: LBRAC complex_formula RBRAC connective LBRAC formula RBRAC .

    $default  reduce using rule 14 (complex_formula)


state 82

   19 terms: terms connective LBRAC terms RBRAC .

    $default  reduce using rule 19 (terms)


state 83

   18 terms: terms . connective predicate
   19      | terms . connective LBRAC terms RBRAC
   20      | terms . connective formula
   21      | terms . connective MINUS LBRAC terms RBRAC
   21      | terms connective MINUS LBRAC terms . RBRAC

    RBRAC  shift, and go to state 85
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 62


state 84

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC . IMPLY LBRAC predicates RBRAC RBRAC RBRAC

    IMPLY  shift, and go to state 86


state 85

   21 terms: terms connective MINUS LBRAC terms RBRAC .

    $default  reduce using rule 21 (terms)


state 86

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY . LBRAC predicates RBRAC RBRAC RBRAC

    LBRAC  shift, and go to state 87


state 87

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC . predicates RBRAC RBRAC RBRAC

    ANNOT_PREDICATE  shift, and go to state 41

    predicates  go to state 88
    predicate   go to state 89


state 88

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates . RBRAC RBRAC RBRAC
   28 predicates: predicates . connective predicate

    RBRAC  shift, and go to state 90
    EQUIV  shift, and go to state 29
    IMPLY  shift, and go to state 30
    OR     shift, and go to state 31
    AND    shift, and go to state 32

    connective  go to state 91


state 89

   29 predicates: predicate .

    $default  reduce using rule 29 (predicates)


state 90

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC . RBRAC RBRAC

    RBRAC  shift, and go to state 92


state 91

   28 predicates: predicates connective . predicate

    ANNOT_PREDICATE  shift, and go to state 41

    predicate  go to state 93


state 92

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC . RBRAC

    RBRAC  shift, and go to state 94


state 93

   28 predicates: predicates connective predicate .

    $default  reduce using rule 28 (predicates)


state 94

    3 MR: ALL VARIABLE LBRAC predicate IMPLY LBRAC LBRAC complex_formula RBRAC IMPLY LBRAC predicates RBRAC RBRAC RBRAC .

    $default  reduce using rule 3 (MR)
